--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ p {
 
 /* section experiance */
 #experiance {
-    padding: 1rem 0;
+    padding: 1rem;
     margin-bottom: 80px;
     background: url('../images/bokeh-2072271_1920.jpg') center center / cover no-repeat fixed;
 }
@@ -116,10 +116,18 @@ p {
     font-size: xx-large;
 }
 
+.inner-box>li {
+    word-wrap: break-word;
+    padding-right: 20px;
+}
+
 .inner-box {
-    width: 33%;
+    width: 90%;
     margin: 1rem 0;
     display: inline-block;
+    padding-left: 30px;
+    padding-right: 20px;
+    padding-bottom: 10px;
 }
 
 hr {
@@ -150,6 +158,10 @@ hr {
 
 .float-left {
     float: left;
+}
+
+.float-right {
+    float: right;
 }
 
 section {
