--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,7 @@ p {
     letter-spacing: 6px;
     text-align: center;
     font-size: xx-large;
+    padding-bottom: 20px;
 }
 
 .inner-box>li {
@@ -145,13 +146,14 @@ hr {
 
 #exp2 {
     background-color: #C2848C;
-    position: relative;
-    z-index: 1;
+    /* position: relative; */
+    left: 70px;
+    top: -15px;
 }
 
 #exp3 {
     background-color: #EDC9D2;
-    position: relative;
+    /* position: relative; */
     left: 70px;
     top: -15px;
 }
@@ -160,9 +162,9 @@ hr {
     float: left;
 }
 
-.float-right {
+/* .float-right {
     float: right;
-}
+} */
 
 section {
     clear: both;
@@ -187,4 +189,38 @@ footer>p {
 
 .text-uppercase {
     text-transform: uppercase;
+}
+
+/* contact me section */
+.send-button {
+    display: block;
+}
+
+.send-button:hover {
+    background-color: #EDC9D2;
+    color: #3F2E3E;
+}
+
+input[type=submit] {
+    margin-top: 20px;
+    margin-left: 0.75rem;
+    padding: 0.75rem;
+    font-size: 100%;
+    background-color: #3F2E3E;
+    color: #EDC9D2;
+    border: none;
+    border-radius: 5px;
+
+}
+
+input[type=reset] {
+    margin-top: 20px;
+    margin-left: 0.75rem;
+    padding: 0.75rem;
+    background-color: #EDC9D2;
+    color: #3F2E3E;
+    border: 1px solid #3F2E3E;
+    border-radius: 5px;
+    font-size: 100%;
+    font-weight: bold;
 }
