Modi: corrected some spelling errors.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,14 +102,14 @@ p {
     float: left;
 }
 
-/* section experiance */
-#experiance {
+/* section experience */
+#experience {
     padding: 1rem;
     margin-bottom: 80px;
     background: url('../images/bokeh-2072271_1920.jpg') center center / cover no-repeat fixed;
 }
 
-#experiance h1 {
+#experience h1 {
     text-transform: uppercase;
     letter-spacing: 6px;
     text-align: center;
