--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,13 @@
 /* font family */
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&family=Barlow:wght@300&family=Patrick+Hand&family=Quicksand:wght@700&family=Source+Sans+3:wght@300&display=swap');
 
-/*------------------------------------------------------------------- remove default margin*/
 * {
     margin: 0;
-    padding: 0;
-    border: none;
 }
 
 body {
     font-family: 'Barlow', sans-serif;
     background-color: #EFE1D1;
-    font-weight: 300;
-    width: 100%;
 }
 
 /* headings, paragraph */
@@ -36,60 +31,53 @@ hr {
 
 /*-------------------------------------------------------------------  head section */
 
-#logo {
+.logo {
     width: 75px;
     height: auto;
     float: left;
-    margin-left: 30px;
-    margin-top: 10px;
-    padding-bottom: 10px;
 }
 
 
 /*-------------------------------------------------------------------  navigation links */
 .navigation {
+    background-color: #331D2C;
+    position: fixed;
+    overflow: hidden;
+    width: 100%;
     top: 0;
-}
-
-.navigation a {
-    float: right;
-}
-
-.navigation li a {
-    display: inline-block;
-    text-decoration: none;
-    margin-right: 10px;
-    color: #331D2C;
-    font-weight: bold;
 }
 
 .navigation li {
     display: inline-block;
-    padding-top: 35px;
 }
 
-.navigation #menu {
+.navigation li a {
+    color: #EDC9D2;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+    padding: 22px 16px;
+    display: inline-block;
+    float: right;
+    /* letter-spacing: 2px; */
+}
+
+.navigation ul {
     text-align: right;
-    letter-spacing: 2px;
-    font-size: 110%;
-    margin-right: 30px;
 }
 
-.navigation li a:hover {
-    color: #A78295;
+.navigation a:hover {
+    color: #331D2C;
+    background-color: #EDC9D2;
 }
-
-#menu #logo {
-    line-height: 150px;
-}
-
-
 
 /*-------------------------------------------------------------------  section home */
 #main {
-    height: 600px;
-    padding: 1rem;
-    margin-bottom: 40px;
+    height: auto;
+    /* padding: 1rem; */
+    /* margin-bottom: 40px; */
+    padding: 16px;
+    margin-top: 60px;
 }
 
 #profile-img {
@@ -99,10 +87,10 @@ hr {
     float: left;
 }
 
-#welcome {
+/* #welcome {
     padding-left: 450px;
     padding-top: 150px;
-}
+} */
 
 #welcome p {
     font-family: 'Patrick Hand',
@@ -111,14 +99,14 @@ hr {
     text-align: center;
     font-size: xx-large;
     letter-spacing: 2px;
-    margin: 0;
+    /* margin: 0;
     padding: 0;
-    border: none;
+    border: none; */
 }
 
-#main #welcome {
+/* #main #welcome {
     float: left;
-}
+} */
 
 /*-------------------------------------------------------------------  section experience */
 #experience {
@@ -376,17 +364,15 @@ ul strong {
 .contact-column {
     flex: 50%;
     padding: 10px;
-    height: 600px;
+    height: auto;
 }
 
 .contact-form {
-    margin: 30px 5% 0 0;
     color: #EDC9D2;
     background-color: #331D2C;
     opacity: .5;
     width: 400px;
     position: absolute;
-    left: 10%;
     padding: 10px;
 }
 
@@ -455,7 +441,6 @@ footer {
     padding: 1em;
     text-align: center;
     width: 100%;
-    position: fixed;
     bottom: 0;
     right: 0;
     z-index: 3;
