Modi: change the stylein the experiance1,2 and 3.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,21 +139,23 @@ hr {
 
 #experience1 {
     background-color: #EDC9D2;
-    position: relative;
-    left: 70px;
-    top: -15px;
+    margin: auto;
+    width: 90%;
+    padding: 10px;
 }
 
 #experience2 {
     background-color: #C2848C;
-    position: relative;
-    left: 70px;
+    margin: auto;
+    width: 90%;
+    padding: 10px;
 }
 
 #experience3 {
     background-color: #EDC9D2;
-    position: relative;
-    left: 70px;
+    margin: auto;
+    width: 90%;
+    padding: 10px;
 }
 
 section {
